--- a/notebook/NLP_Sentiment_&_Emotion_Classification_System.ipynb
+++ b/notebook/NLP_Sentiment_&_Emotion_Classification_System.ipynb
@@ -6,22 +6,29 @@
         "id": "cF9DKNbpxUh2"
       },
       "source": [
-        "#Text based emotion Detector"
+        "#NLP Semtiment & Emotion Classification System"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8uqNlZi-DLB8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\krith\\AppData\\Roaming\\Python\\Python313\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "# Import the required datasets\n",
         "import tensorflow as tf\n",
         "from transformers import AutoTokenizer, TFAutoModel\n",
-        "from tensorflow.keras.layers import Dense, Dropout\n",
-        "from tensorflow.keras.models import Model\n",
         "from datasets import load_dataset\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -119,118 +126,7 @@
         "id": "P7fV6MKNDJgi",
         "outputId": "3998ff09-6a45-45eb-de41-c32639011bc2"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/huggingface_hub/utils/_auth.py:94: UserWarning: \n",
-            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
-            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
-            "You will be able to reuse this secret in all of your notebooks.\n",
-            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "456baa4f9fdd46f1b673e785889b0cca",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "README.md: 0.00B [00:00, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "dc147bce0304444ab1c91de31d564a1b",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "split/train-00000-of-00001.parquet:   0%|          | 0.00/1.03M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c47f400e58e4496c8fb5ab547701b8cc",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "split/validation-00000-of-00001.parquet:   0%|          | 0.00/127k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "9c7630bdbef1463394192347eb3e1545",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "split/test-00000-of-00001.parquet:   0%|          | 0.00/129k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "216739f9783243558e0d10416d14fbdc",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Generating train split:   0%|          | 0/16000 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "0d35e509991e423e949e7bc74da23045",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Generating validation split:   0%|          | 0/2000 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2770009481c1487d9b2b27c64c276255",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Generating test split:   0%|          | 0/2000 [00:00<?, ? examples/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "#Load the dataset - Contains 6 emotions\n",
         "df = load_dataset(\"dair-ai/emotion\")"
@@ -293,70 +189,13 @@
         "id": "1_FZJGBEDOpc",
         "outputId": "83ed964e-12c2-4d26-8f4b-aacf838e565d"
       },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "66bcddcc77e34d9982b84b511cbfc0c1",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ac66d28c2ab043f9846129909a1c076f",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/483 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "26948fdf3bf24a2096cfcda46c686812",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "8484cce4227747e2ad4dd63115aabeb0",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Define Tokenizer - DistilBERT tokenizer converts text into input IDs and attention masks\n",
         "tokenizer = AutoTokenizer.from_pretrained(\"distilbert-base-uncased\")\n",
         "\n",
         "#\n",
-        "def tokenize_text(texts, max_length=128):\\\n",
+        "def tokenize_text(texts, max_length=128):\n",
         "  '''\n",
         "  Pads sequences to the same length, Truncates long sentences\n",
         "  and converts them into tensors\n",
@@ -375,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -384,6 +223,13 @@
         "outputId": "4d3f7517-e858-49d0-ae88-62082def913c"
       },
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "TensorFlow and JAX classes are deprecated and will be removed in Transformers v5. We recommend migrating to PyTorch classes or pinning your version of Transformers.\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -428,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -474,53 +320,21 @@
       },
       "outputs": [
         {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "9893bdbef2074aa7b665ade7ac372bfc",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/483 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "694d0fe81ee74ffa9cb5c3ce4f5aabe4",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/483 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2872aa3e0d2f47fbb76b4279b90851ad",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tf_model.h5:   0%|          | 0.00/363M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From C:\\Users\\krith\\AppData\\Roaming\\Python\\Python313\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+            "\n",
+            "WARNING:tensorflow:From C:\\Users\\krith\\AppData\\Roaming\\Python\\Python313\\site-packages\\tf_keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+            "\n"
+          ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
             "TensorFlow and JAX classes are deprecated and will be removed in Transformers v5. We recommend migrating to PyTorch classes or pinning your version of Transformers.\n",
-            "Some layers from the model checkpoint at distilbert-base-uncased were not used when initializing TFDistilBertModel: ['vocab_projector', 'activation_13', 'vocab_layer_norm', 'vocab_transform']\n",
+            "Some layers from the model checkpoint at distilbert-base-uncased were not used when initializing TFDistilBertModel: ['activation_13', 'vocab_projector', 'vocab_layer_norm', 'vocab_transform']\n",
             "- This IS expected if you are initializing TFDistilBertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
             "- This IS NOT expected if you are initializing TFDistilBertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
             "All the layers of TFDistilBertModel were initialized from the model checkpoint at distilbert-base-uncased.\n",
@@ -568,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "lwGR6oH2DaeY"
       },
@@ -587,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -601,49 +415,7 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 98ms/step - accuracy: 0.4269 - loss: 1.6181 - val_accuracy: 0.5385 - val_loss: 1.4234\n",
-            "Epoch 2/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 89ms/step - accuracy: 0.4943 - loss: 1.5643 - val_accuracy: 0.5415 - val_loss: 1.3945\n",
-            "Epoch 3/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m84s\u001b[0m 93ms/step - accuracy: 0.4992 - loss: 1.5748 - val_accuracy: 0.5470 - val_loss: 1.3774\n",
-            "Epoch 4/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 89ms/step - accuracy: 0.5161 - loss: 1.5502 - val_accuracy: 0.5495 - val_loss: 1.3651\n",
-            "Epoch 5/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 91ms/step - accuracy: 0.5171 - loss: 1.5328 - val_accuracy: 0.5540 - val_loss: 1.3509\n",
-            "Epoch 6/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 89ms/step - accuracy: 0.5200 - loss: 1.5317 - val_accuracy: 0.5635 - val_loss: 1.3421\n",
-            "Epoch 7/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 89ms/step - accuracy: 0.5164 - loss: 1.5258 - val_accuracy: 0.5660 - val_loss: 1.3299\n",
-            "Epoch 8/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 89ms/step - accuracy: 0.5189 - loss: 1.5105 - val_accuracy: 0.5680 - val_loss: 1.3227\n",
-            "Epoch 9/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 90ms/step - accuracy: 0.5237 - loss: 1.5028 - val_accuracy: 0.5680 - val_loss: 1.3101\n",
-            "Epoch 10/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 90ms/step - accuracy: 0.5241 - loss: 1.4839 - val_accuracy: 0.5720 - val_loss: 1.3032\n",
-            "Epoch 11/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 90ms/step - accuracy: 0.5267 - loss: 1.4880 - val_accuracy: 0.5720 - val_loss: 1.2953\n",
-            "Epoch 12/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 90ms/step - accuracy: 0.5384 - loss: 1.4564 - val_accuracy: 0.5735 - val_loss: 1.2898\n",
-            "Epoch 13/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 90ms/step - accuracy: 0.5390 - loss: 1.4866 - val_accuracy: 0.5760 - val_loss: 1.2788\n",
-            "Epoch 14/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 90ms/step - accuracy: 0.5434 - loss: 1.4421 - val_accuracy: 0.5775 - val_loss: 1.2737\n",
-            "Epoch 15/15\n",
-            "\u001b[1m500/500\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m45s\u001b[0m 90ms/step - accuracy: 0.5345 - loss: 1.4497 - val_accuracy: 0.5760 - val_loss: 1.2663\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "DistilBERT Model saved successfully to distilbert_emotion_classifier.h5\n"
+            "\u001b[1m 56/500\u001b[0m \u001b[32m━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m38:58\u001b[0m 5s/step - accuracy: 0.0821 - loss: 2.0237"
           ]
         }
       ],
@@ -652,7 +424,7 @@
         "history = model.fit(\n",
         "    dataset,\n",
         "    epochs=15,\n",
-        "    validation_data=dataset_val,\n",
+        "    validation_data=dataset,\n",
         "    class_weight=class_weights,\n",
         "    callbacks = tf.keras.callbacks.EarlyStopping( #EarlyStopping prevents overfitting and restores best weights\n",
         "        monitor=\"val_loss\",\n",
@@ -675,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -734,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -893,9 +665,10 @@
         "    print(class_report_bert)\n",
         "\n",
         "    # 4. Save the model\n",
-        "    model_save_path_bert = \"distilbert_emotion_classifier.h5\"\n",
-        "    model.save(model_save_path_bert)\n",
-        "    print(f\"\\nDistilBERT Model saved successfully to {model_save_path_bert}\\n\")\n",
+        "    model_save_path = \"../models/distilbert_emotion_classifier.h5\"\n",
+        "    model.save(model_save_path)\n",
+        "    print(f\"Model saved at {model_save_path}\")\n",
+        "\n",
         "\n",
         "    encoded_data_test = tokenize_text(list(df['test']['text']))\n",
         "    dataset_test = tf.data.Dataset.from_tensor_slices(\n",
@@ -915,7 +688,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -968,7 +741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -996,7 +769,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "GvAGelDzCag3"
       },
@@ -1018,7 +791,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
